# cyber-risk-intelligence-lakehouse

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: docker-build.yml  python-ci.yml  terraform-validate.yml
api/: main.py
app/: dashboard.py
dbt/cyber_risk_dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/cyber_risk_dbt/models/: sources.yml
infrastructure/aws/: README.md  ecr.tf  ecs.tf  iam.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  security_groups.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
ml/: train_priority_model.py
rag/: remediation_copilot.py
rag/knowledge_base/: cisa_kev_remediation.md  cvss_prioritisation.md  cwe_remediation.md  emergency_response.md  vulnerability_management.md
reports/: api_endpoint_summary.csv  api_monitoring_summary.json  classification_report.csv  confusion_matrix.csv  copilot_eval_report.csv  copilot_eval_summary.json  data_quality_report.csv  feature_importance.csv  model_metrics.json
scripts/: build_analytics_database.py  evaluate_copilot.py  generate_monitoring_report.py  inspect_lakehouse.py  run_api.py  run_copilot.py  run_dbt.py  run_ingestion.py  run_ml.py  run_pipeline.py  smoke_test_api.py  validate_lakehouse.py  validate_terraform_template.py
src/cyber_risk/: config.py
src/cyber_risk/etl/: build_gold_tables.py  build_silver_tables.py  spark_session.py
src/cyber_risk/ingestion/: download_epss.py  download_kev.py  download_nvd_recent.py  http_client.py
(+10 files in other folders)
