[project]
name = "cyber-risk-intelligence-lakehouse"
version = "0.1.0"
description = "An end-to-end cyber risk intelligence lakehouse with PySpark, ML, and AI remediation copilot."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"